# sysarch-acs

./: CMakeLists.txt  CMakePresets.json  Drtm_17dec.efi  Drtm_dma.efi  LICENSE  README.md  Sbsa_11feb.efi  Sbsa_11feb_delay.efi
.github/workflows/: sysarch_ci.yml  sysarch_commit.yml
apps/baremetal/: acs.h  acs_common.c  acs_globals.c  acs_helpers.c  acs_runtime_init.c  acs_runtime_init.h  bsa_main.c  pc_bsa_main.c  sbsa_main.c
apps/uefi/: Bsa.inf  Drtm.inf  Mem.inf  Mpam.inf  Pfdi.inf  Sbsa.inf  SbsaNist.inf  Vbsa.inf  acs.h  acs_globals.c  acs_helpers.c  app.c  bsa_main.c  drtm_main.c  mem_test_main.c  mpam_main.c  pc_bsa.inf  pc_bsa_main.c  pfdi_main.c  sbsa_main.c  sbsa_nist_main.c  vbsa_main.c  xbsa_acpi.inf  xbsa_main.c
cca/firme/: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
cca/firme/docs/: FIRME_Architecture_Compliance_Suite_Scenario_Document.rst  porting_guide.md
cca/firme/platform/pal_baremetal/targets/fvp/include/: pal_platform.h  pal_uart.h
cca/firme/platform/pal_baremetal/targets/fvp/src/: pal_uart_pl011.c
cca/firme/test/gpt/: gpt_transition_feat_gdi.c  gpt_transition_feat_gpc2.c  gpt_transition_feat_rme.c
cca/firme/tools/cmake/toolchains/: aarch64-clang.cmake  aarch64-linux-gnu-gcc.cmake  aarch64-none-elf-gcc.cmake
cca/firme/tools/config/: README.md
cca/firme/tools/linker/: host.ld  realm.ld  secure.ld
cca/firme/tools/scripts/: build_tfa_fvp.sh  mk_fip.sh  run_fvp_regression.sh
cca/firme/val/: val_firme_test.c
cca/firme/val/host/: val_host_dispatcher.c  val_host_entry.S  val_host_main.c  val_host_vectors.S
cca/firme/val/include/: val_firme_abi.h  val_firme_diag.h  val_firme_dispatch.h  val_firme_gpt.h  val_firme_gpt_defs.h  val_firme_rmmd.h  val_firme_rules.h  val_firme_spmd_msg.h  val_firme_suite.h  val_firme_test.h  val_platform.h  val_secure_entry.h
cca/firme/val/realm/: val_realm_entry.S  val_realm_main.c  val_realm_rmi_dispatch.c  val_realm_vectors.S
cca/firme/val/secure/: val_secure_entry.S  val_secure_sel1_entry.S  val_secure_spmc.c  val_secure_vectors.S
cca/firme/val/src/: val_firme_abi.c  val_firme_diag.c  val_firme_gpt.c  val_firme_rules_dispatch.c  val_firme_suite.c  val_firme_transport.c  val_platform.c
cca/firme/val_common/include/: val_log.h
cca/firme/val_common/include/aarch64/: asm_macros.S  sysreg.h
cca/firme/val_common/include/val_common/: val_arch_init.h  val_fault.h  val_gicv3.h  val_mem.h  val_mmu.h  val_smc_args.h  val_smccc.h  val_status.h
cca/firme/val_common/src/: val_arch_init.c  val_fault.c  val_gicv3.c  val_log.c  val_mem.c  val_mmu.c  val_smccc.S  val_sysreg.S
docs/baremetal/: README.md
docs/bsa/: README.md  arm_bsa_testcase_checklist.md
docs/common/: cli_args.md  uefi_build.md
docs/mem_test/: README.md
docs/mpam/: README.md  arm_mpam_architecture_compliance_test_scenario.md
docs/pfdi/: README.md  arm_pfdi_testcase_checklist.md
docs/sbsa/: README.md  arm_sbsa_testcase_checklist.md
docs/unified/: README.md
docs/vbsa/: README.md  arm_vbsa_architecture_compliance_test_scenario.md  arm_vbsa_testcase_checklist.md
mem_test/patches/: cxl_revert.patch  mem_test_edk2.patch
pal/baremetal/: README.md  module_config.rst  pal.cmake  run_time_params.rst
pal/include/: pal_print.h  pal_status.h  pal_sysreg.h  platform_override.h
pal/uefi_acpi/: PalLib.inf  SbsaPalNistLib.inf
pal/uefi_dt/: PalLib.inf
test_pool/: Makefile  test.cmake
test_pool/cxl/: cxl001.c  cxl002.c  cxl003.c  cxl004.c  cxl010.c  cxl011.c  cxl013.c
test_pool/drtm/: dl001.c  dl002.c  dl003.c  dl004.c  dl005.c  dl006.c  dl007.c  dl008.c  dl009.c  dl010.c  dl011.c  dl012.c  dl014.c  dl018.c  interface001.c  interface002.c  interface003.c  interface004.c  interface005.c  interface006.c  interface007.c  interface008.c  interface009.c  interface010.c  interface011.c  interface012.c  interface013.c  interface014.c  interface015.c
test_pool/ete/: ete001.c  ete002.c  ete003.c  ete004.c  ete005.c  ete006.c  ete007.c  ete008.c
test_pool/exerciser/: e001.c  e002.c  e003.c  e004.c  e006.c  e007.c  e008.c  e010.c  e011.c  e012.c  e013.c  e014.c  e015.c  e016.c  e017.c  e019.c  e020.c  e021.c  e022.c  e023.c  e024.c  e025.c  e026.c  e027.c  e028.c  e029.c  e030.c  e033.c  e035.c  e036.c  e039.c  e040.c  e041.c  e043.c  e044.c  e045.c  e046.c
test_pool/gic/: g001.c  g002.c  g003.c  g004.c  g005.c  g006.c  g007.c  g008.c  g009.c  g010.c  g011.c  g012.c  g013.c  g014.c  g015.c  g016.c  its001.c  its002.c  its003.c  its004.c  its005.c  its006.c  v2m001.c  v2m002.c  v2m003.c  v2m004.c
test_pool/memory_map/: m001.c  m002.c  m003.c  m004.c  m005.c
test_pool/mpam/: error001.c  error002.c  error003.c  error004.c  error005.c  error006.c  error007.c  error008.c  error009.c  error010.c  error011.c  error012.c  error013.c  error014.c  feat001.c  intr001.c  intr002.c  intr003.c  intr004.c  intr005.c  intr006.c  mem001.c  mem002.c  mem003.c  monitor001.c  monitor002.c  monitor003.c  monitor004.c  monitor005.c  monitor006.c  monitor007.c  monitor008.c  mpam001.c  mpam002.c  mpam003.c  mpam004.c  mpam005.c  mpam006.c  mpam007.c  partition001.c  (+11 more)
test_pool/nist_sts/: SbsaNistLib.inf  test_n001.c
test_pool/pcie/: p001.c  p002.c  p003.c  p004.c  p005.c  p006.c  p007.c  p008.c  p009.c  p010.c  p011.c  p017.c  p018.c  p019.c  p020.c  p020_data.h  p021.c  p021_data.h  p022.c  p022_data.h  p023.c  p024.c  p024_data.h  p025.c  p025_data.h  p026.c  p026_data.h  p030.c  p031.c  p032.c  p033.c  p035.c  p036.c  p037.c  p038.c  p039.c  p042.c  p045.c  p046.c  p047.c  (+54 more)
test_pool/pe/: pe001.c  pe002.c  pe003.c  pe004.c  pe006.c  pe007.c  pe008.c  pe009.c  pe010.c  pe011.c  pe012.c  pe013.c  pe014.c  pe015.c  pe016.c  pe017.c  pe018.c  pe019.c  pe020.c  pe021.c  pe022.c  pe023.c  pe024.c  pe025.c  pe026.c  pe027.c  pe028.c  pe029.c  pe030.c  pe031.c  pe032.c  pe033.c  pe034.c  pe035.c  pe036.c  pe037.c  pe038.c  pe039.c  pe040.c  pe041.c  (+23 more)
test_pool/peripherals/: d001.c  d002.c  d003.c  d004.c
test_pool/pfdi/: pfdi001.c  pfdi002.c  pfdi003.c  pfdi004.c  pfdi005.c  (+25 more)
val/: Makefile  SbsaValNistLib.inf  ValLib.inf  ValLibRB.inf  val.cmake
(+314 files in other folders)
